--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # --- SUNUCU AYARLARI ---
-EXPO_PUBLIC_API_URL="http://192.168.1.135:4000"
+EXPO_PUBLIC_API_URL="https://pratik-sef-backend.onrender.com"
