refactor: replace fetch calls with apiFetch utility for improved API handling and update API URL to production endpoint

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # --- SUNUCU AYARLARI ---
-EXPO_PUBLIC_API_URL="https://pratik-sef-backend.onrender.com"
+EXPO_PUBLIC_API_URL="http://pratik-sef-backend.onrender.com"
